syntax = "proto3";

package imageer.v1;

message ImageS3DeleteRequest {
  string image_id = 1;
  string project_id = 2;
  repeated string s3_keys = 3;
}
